--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Portafolio</title>
    
-            <link rel="icon" type="image/xicon" href="favicon.ico/">
+            <link rel="icon" type="image/xicon" href="favicon.ico">
                 <meta charset="utf8"/> 
                 <meta name="Autor" content="Andrés Fernando García Delgado"/> 
                 <meta name="Fecha" content="Lunes 10 de Febrero de 2025"/>
