--- a/Actividad 3.html
+++ b/Actividad 3.html
@@ -6,7 +6,7 @@
 
 <link rel="icon" type="image/xicon" href="favicon.ico">
 <meta charset="utf8"/> 
-<meta name="Autor" content="José Manuel Niño Ibarra"/> 
+<meta name="Autor" content="Andrés Fernando García Delgado"/> 
 <meta name="Fecha" content="Jueves 06 de Febrero de 2025"/>
 <meta name="Descripcion" content="Portafolio"/> 
 </head>
