--- a/Actividad_9.html
+++ b/Actividad_9.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+ 
+<html>
+<head>
+<title>Unidad 1 | Actividad 7</title>
 
+<link rel="icon" type="image/xicon" href="favicon.ico">
+<meta charset="utf8"/> 
+<meta name="Autor" content="Andrés Fernando García Delgado"/> 
+<meta name="Fecha" content="Martes 18 de Febrero de 2025"/>
+<meta name="Descripcion" content="Formatos"/> 
+</head>
+
+<body>
+    
+<h1>Unidad 1 | Actividad 09 :: Tema (Formatos)</h1>
+
+Address :: <Address>Texto con formato address</Address>
+Small :: <small>Texto con formato small</small><br>
+Cite :: <cite>Texto con formato cite</cite><br>
+Blockquote :: <blockquote>Texto con formato blockquote</blockquote>
+
+
+
+</body>
+
+</html>
