--- a/Actividad_9.html
+++ b/Actividad_9.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
- 
-<html>
+<html lang="es">
 <head>
-<title>Unidad 1 | Actividad 7</title>
-
-<link rel="icon" type="image/xicon" href="favicon.ico">
-<meta charset="utf8"/> 
-<meta name="Autor" content="Andrés Fernando García Delgado"/> 
-<meta name="Fecha" content="Martes 18 de Febrero de 2025"/>
-<meta name="Descripcion" content="Formatos"/> 
+<!-- Llenar los datos para: Title y Metadata -->
+<title>Unidad 1 | Actividad 09</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta charset="utf-8">
+<meta name="Autor" content="Braulio Martinez Salgado">
+<meta name="Fecha" content="18 de febrero de 2025">
+<meta name="Descripción" content="Formatos">
 </head>
-
 <body>
-    
-<h1>Unidad 1 | Actividad 09 :: Tema (Formatos)</h1>
-
-Address :: <Address>Texto con formato address</Address>
-Small :: <small>Texto con formato small</small><br>
-Cite :: <cite>Texto con formato cite</cite><br>
-Blockquote :: <blockquote>Texto con formato blockquote</blockquote>
-
-
-
+<!-- Cambiar el título y colocar el contenido aquí -->
+<h1>Unidad 1 | Actividad 09: Tema (Formatos)</h1>
+<address>Texto con formato address</address>
+<small>Texto con formato small</small> <br>
+<cite>Texto con formato cite</cite> <br>
+<blockquote>Texto con formato blockquote</blockquote>
+Mark: <mark>Texto con formato mark</mark><br><br>
+Mark, Small & Cite; <smell><cite> Texto con <mark>formato</mark></cite></smell><br><br>
+Subindice <sub>Texto con formato inferior</sub><br><br>
+Superindice <sup>Texto con formato superior</sup><br><br>
+Formulas; Glucosa <small>C<sub>6</sub>H<sub>12</sub>0<sub>6</sub></small><br><br>
+Var: <var>Texto con formato var</var><br>
+Code: <code>Texto con formato code</code><br>
+Keyboard: <kbd>Texto con formato kbd</kbd><br>
+Preformato: <pre>
+    texto
+            con
+    fomato
+                    pre
+</pre>
+ 
+ 
 </body>
-
-</html>
+</html
