--- a/Actividad_2-1.html
+++ b/Actividad_2-1.html
@@ -8,7 +8,7 @@
 <meta charset="utf8"/> 
 <meta name="Autor" content="Andrés Fernando García Delgado"/> 
 <meta name="Fecha" content="Jueves 06 de Febrero de 2025"/>
-<meta name="Descripcion" content="Portafolio"/> 
+<meta name="Descripcion" content="Mapa del Sitio"/> 
 </head>
 <body>
 <h1> Programación web - 187134 Andrés Fernando García Delgado</h1>
