--- a/Actividad_3.html
+++ b/Actividad_3.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
- 
-<html>
+<html lang="es">
 <head>
-<title>Unidad 1 | Actividad 3</title>
-
-<link rel="icon" type="image/xicon" href="favicon.ico">
-<meta charset="utf8"/> 
-<meta name="Autor" content="Andrés Fernando García Delgado"/> 
-<meta name="Fecha" content="Jueves 06 de Febrero de 2025"/>
-<meta name="Descripcion" content="Portafolio"/> 
+<!-- Llenar los datos para Title y Metadatos -->
+<title>Unidad 1 | Actividad 03</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta charset="utf-8">
+<meta name="Autor" content="Andrés Fernando García Delgado">
+<meta name="Fecha" content="12 de Febrero de 2025">
+<meta name="Descripción" content="Párrafo">
 </head>
 <body>
-<h1> Programación web - 187134 Andrés Fernando García Delgado</h1>
-<h1>Unidad 1 | Actividad 02-1 :: World Cup</h1>
-<h2>Historia</h2>
-<h2>Resumen</h2>
-<h2>Equipos y selecciones</h2>
-<h2>Impacto y legado</h2>
-<h2>Estadios y sedes</h2>
-<h2>Jugadores Legendarios</h2>
+<!-- Cambiar el título y colocar el contenido aquí -->
+<h1>Unidad 1 | Actividad 03 :: Tema (Párrafo)</h1>
+<p align="center">
+       Lorem ipsum dolor amet, consectetur adipiscing elit. Urna nostra fermentum facilisi orci fermentum pulvinar.
+</p>
+<p align="right">
+       Present tellus fusce justo, nullam class sollicitudin suscipit. Lectus odio velit diam nam consequat.
+</p>
+<p align="justify">
+       Phasellus torquent velit nisl aliquet, aliquet lobortis ullamcorper. Tristique nisl elementum molestie purus.
+</p>
 </body>
-
 </html>
