--- a/Actividad_5.html
+++ b/Actividad_5.html
@@ -8,7 +8,7 @@
 <meta charset="utf8"/> 
 <meta name="Autor" content="Andrés Fernando García Delgado"/> 
 <meta name="Fecha" content="Jueves 13 de Febrero de 2025"/>
-<meta name="Descripcion" content="Portafolio"/> 
+<meta name="Descripcion" content="Listas 2"/> 
 </head>
 <body>
     
