--- a/Actividad_7.html
+++ b/Actividad_7.html
@@ -7,13 +7,13 @@
 <link rel="icon" type="image/xicon" href="favicon.ico">
 <meta charset="utf8"/> 
 <meta name="Autor" content="Andrés Fernando García Delgado"/> 
-<meta name="Fecha" content="Jueves 13 de Febrero de 2025"/>
-<meta name="Descripcion" content="Widget"/> 
+<meta name="Fecha" content="Viernes 14 de Febrero de 2025"/>
+<meta name="Descripcion" content="Enlaces"/> 
 </head>
 
 <body>
     
-<h1>Unidad 1 | Actividad 06 :: Tema (Enlaces)</h1>
+<h1>Unidad 1 | Actividad 07 :: Tema (Enlaces)</h1>
 
 <a href="https://es.wikipedia.org/wiki/Copa_Mundial_de_F%C3%BAtbol">Visitar página web</a><br>
 <a href="Actividad 5.html" target"_blank">Visitar página web</a><br>
