--- a/Actividad_8.html
+++ b/Actividad_8.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+ 
+<html>
+<head>
+<title>Unidad 1 | Actividad 7</title>
 
+<link rel="icon" type="image/xicon" href="favicon.ico">
+<meta charset="utf8"/> 
+<meta name="Autor" content="Andrés Fernando García Delgado"/> 
+<meta name="Fecha" content="Lunes 17 de Febrero de 2025"/>
+<meta name="Descripcion" content="Imagenes"/> 
+</head>
+
+<body>
+    
+<h1>Unidad 1 | Actividad 08 :: Tema (Imagenes)</h1>
+<h3>Imagenes</h3>
+<details name="imagen">
+<summary>Logo en tamaño original</summary>
+<img height  src="archivos/banner.jpg" alt="Banner de las copas del mundo">
+</details>
+
+<details name="imagen">
+<summary>Logo en tamaño 150 pixeles</summary>
+<img height  src="archivos/banner.jpg" alt="Banner de las copas del mundo">
+</details>
+
+<details name="imagen">
+<summary>Banner en tamaño original</summary>
+<img height  src="archivos/banner.jpg" alt="Banner de las copas del mundo">
+</details>
+
+<details name="imagen">
+<summary>Banner en tamaño 150 pixeles de alto</summary>
+<img height  src="archivos/banner.jpg" alt="Banner de las copas del mundo">
+</details>
+
+<details name="imagen">
+<summary>Banner en tamaño 300 pixeles de ancho</summary>
+<img height  src="archivos/banner.jpg" alt="Banner de las copas del mundo">
+</details>
+
+<figure>
+
+</figure>
+
+</body>
+
+</html>
