--- a/Actividad_9.html
+++ b/Actividad_9.html
@@ -5,7 +5,7 @@
 <title>Unidad 1 | Actividad 09</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta charset="utf-8">
-<meta name="Autor" content="Braulio Martinez Salgado">
+<meta name="Autor" content="Andrés Fernando García Delgado">
 <meta name="Fecha" content="18 de febrero de 2025">
 <meta name="Descripción" content="Formatos">
 </head>
