--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
 <li>Actividad No.2 (<i>Títulos</i>) <a href="Actividad_2-0.html">Link</a></li>
 <li>Actividad No.2-1 (<i>Mapa de sitio</i>) <a href="Actividad_2-1.html">Link</a></li>
 <li>Actividad No.3 (<i>Párrafo</i>) <a href="Actividad_3.html">Link</a></li>
-<li>Actividad No.4 (<i>Listas I</i>) <a href="Actividad_4.html">Link</a></li>
+<li>Actividad No.4 (<i>Listas I</i>) <a href="Actividad_4-0.html">Link</a></li>
 <li>Actividad No.4-1 (<i>Plan de estudios</i>) <a href="Actividad_4-1.html">Link</a></li>
 <li>Actividad No.5 (<i>Listas II</i>) <a href="Actividad_5.html">Link</a></li>
 <li>Actividad No.6 (<i>Widget</i>) <a href="Actividad_6.html">Link</a></li>
 <li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_7.html">Link</a></li>
+<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_8.html">Link</a></li>
+<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_9-0.html">Link</a></li>
+<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_9-1.html">Link</a></li>
+<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_10.html">Link</a></li>
 </ol>
 </li>
 <li><strong>Unidad No. 2</strong></li>
