--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <li>Actividad No.5 (<i>Listas II</i>) <a href="Actividad_5.html">Link</a></li>
 <li>Actividad No.6 (<i>Widget</i>) <a href="Actividad_6.html">Link</a></li>
 <li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_7.html">Link</a></li>
-<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_8.html">Link</a></li>
-<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_9-0.html">Link</a></li>
-<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_9-1.html">Link</a></li>
-<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_10.html">Link</a></li>
+<li>Actividad No.8 (<i>Enlaces</i>) <a href="Actividad_8.html">Link</a></li>
+<li>Actividad No.9 (<i>Enlaces</i>) <a href="Actividad_9-0.html">Link</a></li>
+<li>Actividad No.9-1 (<i>Enlaces</i>) <a href="Actividad_9-1.html">Link</a></li>
+<li>Actividad No.10 (<i>Enlaces</i>) <a href="Actividad_10.html">Link</a></li>
 </ol>
 </li>
 <li><strong>Unidad No. 2</strong></li>
