--- a/Actividad_8.html
+++ b/Actividad_8.html
@@ -17,27 +17,27 @@
 <h3>Imagenes</h3>
 <details name="imagen">
 <summary>Logo en tamaño original</summary>
-<img height  src="archivos/banner.PNG" alt="Banner de las copas del mundo">
+<img height  src="banner.png" alt="Banner de las copas del mundo">
 </details>
 
 <details name="imagen">
 <summary>Logo en tamaño 150 pixeles</summary>
-<img height  src="archivos/banner.png" alt="Banner de las copas del mundo">
+<img height  src="banner.png" alt="Banner de las copas del mundo">
 </details>
 
 <details name="imagen">
 <summary>Banner en tamaño original</summary>
-<img height  src="archivos/banner.png" alt="Banner de las copas del mundo">
+<img height  src="banner.png" alt="Banner de las copas del mundo">
 </details>
 
 <details name="imagen">
 <summary>Banner en tamaño 150 pixeles de alto</summary>
-<img height  src="archivos/banner.png" alt="Banner de las copas del mundo">
+<img height  src="banner.png" alt="Banner de las copas del mundo">
 </details>
 
 <details name="imagen">
 <summary>Banner en tamaño 300 pixeles de ancho</summary>
-<img height  src="archivos/banner.png" alt="Banner de las copas del mundo">
+<img height  src="banner.png" alt="Banner de las copas del mundo">
 </details>
 
 <figure>
