--- a/Actividad_8.html
+++ b/Actividad_8.html
@@ -14,31 +14,33 @@
 <body>
     
 <h1>Unidad 1 | Actividad 08 :: Tema (Imagenes)</h1>
-<h3>Imagenes</h3>
+<h3>Imágenes</h3>
+
 <details name="imagen">
-<summary>Logo en tamaño original</summary>
-<img height  src="banner.png" alt="Banner de las copas del mundo">
+    <summary>Logo en tamaño original</summary>
+    <img src="logo.png" alt="Logo de las copas del mundo">
 </details>
 
 <details name="imagen">
-<summary>Logo en tamaño 150 pixeles</summary>
-<img height  src="banner.png" alt="Banner de las copas del mundo">
+    <summary>Logo en tamaño 150 píxeles</summary>
+    <img src="logo.png" alt="Logo de las copas del mundo" width="150">
 </details>
 
 <details name="imagen">
-<summary>Banner en tamaño original</summary>
-<img height  src="banner.png" alt="Banner de las copas del mundo">
+    <summary>Banner en tamaño original</summary>
+    <img src="banner.png" alt="Banner de las copas del mundo">
 </details>
 
 <details name="imagen">
-<summary>Banner en tamaño 150 pixeles de alto</summary>
-<img height  src="banner.png" alt="Banner de las copas del mundo">
+    <summary>Banner en tamaño 150 píxeles de alto</summary>
+    <img src="banner.png" alt="Banner de las copas del mundo" height="150">
 </details>
 
 <details name="imagen">
-<summary>Banner en tamaño 300 pixeles de ancho</summary>
-<img height  src="banner.png" alt="Banner de las copas del mundo">
+    <summary>Banner en tamaño 300 píxeles de ancho</summary>
+    <img src="banner.png" alt="Banner de las copas del mundo" width="300">
 </details>
+
 
 <figure>
 
