--- a/Actividad_8.html
+++ b/Actividad_8.html
@@ -18,12 +18,12 @@
 
 <details name="imagen">
     <summary>Logo en tamaño original</summary>
-    <img src="logo.png" alt="Logo de las copas del mundo">
+    <img src="banner.png" alt="Logo de las copas del mundo">
 </details>
 
 <details name="imagen">
     <summary>Logo en tamaño 150 píxeles</summary>
-    <img src="logo.png" alt="Logo de las copas del mundo" width="150">
+    <img src="banner.png" alt="Logo de las copas del mundo" width="150">
 </details>
 
 <details name="imagen">
