--- a/Actividad_7.html
+++ b/Actividad_7.html
@@ -16,7 +16,7 @@
 <h1>Unidad 1 | Actividad 07 :: Tema (Enlaces)</h1>
 
 <a href="https://es.wikipedia.org/wiki/Copa_Mundial_de_F%C3%BAtbol">Visitar página web</a><br>
-<a href="Actividad 5.html" target"_blank">Visitar página web</a><br>
+<a href="Actividad_5.html" target"_blank">Visitar página web</a><br>
 <a href="archivos/Construccion.jpg" target="_blank">Visitar página web</a><br>
 <a href="archivos/ahorcado.ccp">Visitar página web</a><br>
 <a href="archivos/Calendario.pdf">Visitar página web</a><br>
