--- a/Actividad_7.html
+++ b/Actividad_7.html
@@ -17,7 +17,7 @@
 
 <a href="https://es.wikipedia.org/wiki/Copa_Mundial_de_F%C3%BAtbol">Visitar página web</a><br>
 <a href="Actividad_5.html" target"_blank">Visitar página web</a><br>
-<a href="Construccion.jpg" target="_blank">Visitar página web</a><br>
+<a href="Construccion.png" target="_blank">Visitar página web</a><br>
 <a href="ahorcado.ccp">Visitar página web</a><br>
 <a href="Calendario.pdf">Visitar página web</a><br>
 
