--- a/Actividad_4-0.html
+++ b/Actividad_4-0.html
@@ -13,15 +13,26 @@
 <body>
     
 <h1>Unidad 1 | Actividad 04 :: Tema (Listas)</h1>
-<h3>Lista con viñeta</h3>
+
+   <h3>Lista con viñetas</h3>
 <ul>
-    <li>Lunes</li>
-    <li>Viernes</li>
+<li>Lunes</li>
+<li>Martes</li>
+<li>Miercoles</li>
+<li>Jueves</li>
+<li>Viernes</li>
+<li>Sabado</li>
+<li>Domingo</li>
 </ul>
 <h3>Lista numerada</h3>
 <ol>
-    <li>Lunes</li>
-    <li>Viernes</li>
+<li>Lunes</li>
+<li>Martes</li>
+<li>Miercoles</li>
+<li>Jueves</li>
+<li>Viernes</li>
+<li>Sabado</li>
+<li>Domingo</li>
 </ol>
 </body>
 </html>
