--- a/Actividad_2-1.html
+++ b/Actividad_2-1.html
@@ -14,11 +14,22 @@
 <h1> Programación web - 187134 Andrés Fernando García Delgado</h1>
 <h1>Unidad 1 | Actividad 02-1 :: World Cup</h1>
 <h2>Historia</h2>
+<p>La Copa Mundial de la FIFA, conocida como la Copa del Mundo, es el torneo más importante del fútbol mundial. Se celebra cada cuatro años desde 1930, con excepción de los años 1942 y 1946 debido a la Segunda Guerra Mundial. Este evento reúne a las mejores selecciones nacionales del mundo en un enfrentamiento por el título de campeón mundial.</p>
+ 
 <h2>Resumen</h2>
+<p>La Copa del Mundo se lleva a cabo cada cuatro años y cuenta con una fase de clasificación en la que participan equipos de todo el mundo. Los equipos clasificados se agrupan en una fase de grupos, seguido de eliminatorias directas hasta llegar a la final. El campeón mundial recibe el trofeo más prestigioso del fútbol.</p>
+ 
 <h2>Equipos y selecciones</h2>
+<p>Equipos legendarios como Brasil, Alemania, Argentina, Francia, e Italia han dominado el torneo a lo largo de los años. Brasil es el país con más títulos, con cinco victorias. Otros países como Alemania e Italia también tienen múltiples títulos. En la Copa Mundial participan selecciones de todos los continentes, cada una con su estilo y su pasión por el fútbol.</p>
+ 
 <h2>Impacto y legado</h2>
+<p>La Copa del Mundo no solo tiene un impacto deportivo, sino que también influye en la cultura, economía y política global. Las victorias y derrotas en el torneo afectan a millones de personas en todo el mundo. El legado de la Copa Mundial ha creado héroes nacionales y ha dejado una huella indeleble en la historia del deporte.</p>
+ 
 <h2>Estadios y sedes</h2>
+<p>La Copa Mundial se celebra en diferentes países, con sedes en algunos de los estadios más grandes y emblemáticos del mundo. Estos estadios se transforman en verdaderos templos del fútbol, con miles de aficionados que asisten para ver los mejores partidos del torneo. Algunas de las sedes más famosas incluyen el Maracanã en Brasil, el Stade de France en Francia y el Estadio Azteca en México.</p>
+ 
 <h2>Jugadores Legendarios</h2>
+<p>El torneo ha visto nacer a algunos de los jugadores más legendarios de la historia del fútbol, como Pelé, Diego Maradona, Zinedine Zidane, Lionel Messi y Cristiano Ronaldo. Estos jugadores han dejado su marca en la Copa del Mundo con actuaciones memorables, goles increíbles y habilidades excepcionales.</p>
+ 
 </body>
-
 </html>
