--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <li>Actividad No.10 (<i>Mapa</i>) <a href="Actividad_10.html">Link</a></li>
 </ol>
 </li>
-<li><strong>Unidad No. 2</strong></li>
+<li><strong>Unidad No. 2</strong>
+</li>
 <li><strong>Unidad No. 3</strong></li>
 <li><strong>Proyecto</strong></li>
 </ul>
