--- a/index.html
+++ b/index.html
@@ -16,26 +16,42 @@
 <p><strong>187134 Andres Fernando Garcia Delgado</strong></p>
 <ul>
 <li><strong>Unidad No. 1</strong>
-<ol>
-<li>Actividad No.1 (<i>Hola mundo</i>) <a href="Actividad_1.html">Link</a></li>
-<li>Actividad No.2 (<i>Títulos</i>) <a href="Actividad_2-0.html">Link</a></li>
-<li>Actividad No.2-1 (<i>Mapa de sitio</i>) <a href="Actividad_2-1.html">Link</a></li>
-<li>Actividad No.3 (<i>Párrafo</i>) <a href="Actividad_3.html">Link</a></li>
-<li>Actividad No.4 (<i>Listas I</i>) <a href="Actividad_4-0.html">Link</a></li>
-<li>Actividad No.4-1 (<i>Plan de estudios</i>) <a href="Actividad_4-1.html">Link</a></li>
-<li>Actividad No.5 (<i>Listas II</i>) <a href="Actividad_5.html">Link</a></li>
-<li>Actividad No.6 (<i>Widget</i>) <a href="Actividad_6.html">Link</a></li>
-<li>Actividad No.7 (<i>Enlaces</i>) <a href="Actividad_7.html">Link</a></li>
-<li>Actividad No.8 (<i>Imágenes</i>) <a href="Actividad_8.html">Link</a></li>
-<li>Actividad No.9 (<i>Formatos</i>) <a href="Actividad_9-0.html">Link</a></li>
-<li>Actividad No.9-1 (<i>Actividad (Química orgánica)</i>) <a href="Actividad_9-1.html">Link</a></li>
-<li>Actividad No.10 (<i>Mapa</i>) <a href="Actividad_10.html">Link</a></li>
-</ol>
+ <ol>
+    <li>Actividad No.1 (<i>Hola mundo</i>) <a href="parcial_1/Actividad_1.html">Link</a></li>
+    <li>Actividad No.2 (<i>Títulos</i>) <a href="parcial_1/Actividad_2-0.html">Link</a></li>
+    <li>Actividad No.2-1 (<i>Mapa de sitio</i>) <a href="parcial_1/Actividad_2-1.html">Link</a></li>
+    <li>Actividad No.3 (<i>Párrafo</i>) <a href="parcial_1/Actividad_3.html">Link</a></li>
+    <li>Actividad No.4 (<i>Listas I</i>) <a href="parcial_1/Actividad_4-0.html">Link</a></li>
+    <li>Actividad No.4-1 (<i>Plan de estudios</i>) <a href="parcial_1/Actividad_4-1.html">Link</a></li>
+    <li>Actividad No.5 (<i>Listas II</i>) <a href="parcial_1/Actividad_5.html">Link</a></li>
+    <li>Actividad No.6 (<i>Widget</i>) <a href="parcial_1/Actividad_6.html">Link</a></li>
+    <li>Actividad No.7 (<i>Enlaces</i>) <a href="parcial_1/Actividad_7.html">Link</a></li>
+    <li>Actividad No.8 (<i>Imágenes</i>) <a href="parcial_1/Actividad_8.html">Link</a></li>
+    <li>Actividad No.9 (<i>Formatos</i>) <a href="parcial_1/Actividad_9-0.html">Link</a></li>
+    <li>Actividad No.9-1 (<i>Actividad (Química orgánica)</i>) <a href="parcial_1/Actividad_9-1.html">Link</a></li>
+    <li>Actividad No.10 (<i>Mapa</i>) <a href="parcial_1/Actividad_10.html">Link</a></li>
+  </ol>
 </li>
 <li><strong>Unidad No. 2</strong>
+  <ol>
+    <li>Actividad No. 1 (<i>Tablas</i>) <a href="parcial_2/actividad_01.html">Link</a></li>
+    <li>Actividad No. 2 (<i>Tablas combinadas</i>) <a href="parcial_2/actividad_02.html">Link</a></li>
+    <li>Actividad No. 2-1 (<i>Estilo texto</i>) <a href="parcial_2/actividad_02-1.html">Link</a></li>
+    <li>Actividad No. 3 (<i>Estilo texto</i>) <a href="parcial_2/actividad_03.html">Link</a></li>
+    <li>Actividad No. 4 (<i>Listas HTML</i>) <a href="parcial_2/actividad_04.html">Link</a></li>
+    <li>Actividad No. 4-1 (<i>act4</i>) <a href="parcial_2/actividad_04-1.html">Link</a></li>
+    <li>Actividad No. 4-2 (<i>act4-2</i>) <a href="parcial_2/actividad_04-2.html">Link</a></li>
+    <li>Actividad No. 5 (<i>Menu</i>) <a href="parcial_2/actividad_05.html">Link</a></li>
+    <li>Actividad No. 6 (<i>Boostrap</i>) <a href="parcial_2/actividad_06.html">Link</a></li>
+    <li>Actividad No. 7 (<i>Submenú de navegación</i>) <a href="parcial_2/actividad_07.html">Link</a></li>
+    <li>Actividad No. 7-1 (<i>Menú tipo Bootstrap</i>) <a href="parcial_2/actividad_07-1.html">Link</a></li>
+  </ol>
 </li>
+  
 <li><strong>Unidad No. 3</strong></li>
+  
 <li><strong>Proyecto</strong></li>
+      <li>Proyecto (<i>Proyecto Mundial</i>) <a href="proyecto mundial/MUNDIAL.html">Link</a></li>
 </ul>
 </div>
 </body>
