--- a/proyecto mundial/MUNDIAL.html
+++ b/proyecto mundial/MUNDIAL.html
@@ -1,66 +1,68 @@
 <!doctype html>
 <html lang="es" class="h-100" data-bs-theme="auto">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fútbol Mundial</title>
-  <link rel="icon" type="image/x-icon" href="../favicon.ico">
-  <meta name="author" content="Braulio Martinez Salgado">
-  <meta name="description" content="Portafolio de Programación Web I">
-  <meta name="fecha" content="14 de Febrero de 2025">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Página temática de fútbol con Bootstrap">
+    <meta name="author" content="Proyecto HTML">
+    <title>Fútbol Mundial</title>
+    <link rel="icon" type="image/x-icon" href="icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@400;700&display=swap" rel="stylesheet">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        background-image: url("1140-world-cup-trophy-ball-trivia-esp.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
 
-  <style>
-    body {
-      background-image: url("1140-world-cup-trophy-ball-trivia-esp.jpg");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      color: white;
-      font-family: "Encode Sans Condensed", sans-serif;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
+      h1, h3 {
+        font-family: "Rock Salt", cursive;
+        font-weight: 400;
+      }
 
-    h1, h2 {
-      font-family: "Rock Salt", cursive;
-    }
+      p {
+        font-family: "Encode Sans Condensed", sans-serif;
+      }
 
-    .info-box {
-      background-color: rgba(0, 0, 0, 0.7);
-      border-radius: 15px;
-      padding: 30px;
-      max-width: 700px;
-      box-shadow: 0px 0px 20px rgba(0,0,0,0.6);
-    }
+      .nav-link {
+        color: #ffffff !important;
+      }
 
-    .btn-custom {
-      background-color: white;
-      color: black;
-      font-weight: bold;
-      border-radius: 10px;
-    }
+      main {
+        background-color: rgba(0, 0, 0, 0.6);
+        border-radius: 20px;
+        box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.7);
+      }
+    </style>
+  </head>
+  <body class="d-flex h-100 text-white">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="mb-auto">
+        <div>
+          <h3 class="float-md-start mb-0">Fútbol Mundial</h3>
+          <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link fw-bold py-1 px-0" href="#">Inicio</a>
+            <a class="nav-link fw-bold py-1 px-0" href="referencias/referencias.html">Referencias</a>
+            <a class="nav-link fw-bold py-1 px-0" href="contacto/contacto.html">Contacto</a>
+          </nav>
+        </div>
+      </header>
 
-    hr {
-      border-color: white;
-    }
-  </style>
-</head>
-<body>
-  <div class="info-box">
-    <h1>Copa del Mundo</h1>
-    <h2>Programación Web I</h2>
-    <p><em>14 de Febrero de 2025</em></p>
-    <hr>
-    <p>La Copa Mundial de la FIFA es el torneo más prestigioso del fútbol internacional. Únete a nosotros para revivir los mejores momentos, los goles históricos y las leyendas que marcaron época.</p>
-    <a href="contacto.html" class="btn btn-custom mt-3">Ir a Contacto</a>
-  </div>
-</body>
+      <main class="px-3">
+        <h1>Copa del Mundo</h1>
+        <p class="lead">La Copa Mundial de la FIFA es el torneo más prestigioso del fútbol internacional. Únete a nosotros para revivir los mejores momentos, los goles históricos y las leyendas que marcaron época.</p>
+        <p class="lead">
+          <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Ver más...</a>
+        </p>
+      </main>
+
+      <footer class="mt-auto text-white-50">
+        <p>Diseño adaptado con <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a> por <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+      </footer>
+    </div>
+  </body>
 </html>
- 
