--- a/parcial_2/actividad_08.html
+++ b/parcial_2/actividad_08.html
@@ -5,7 +5,7 @@
         <title>Unidad 02 | Actividad No. 08</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta charset="utf-8">
-        <meta name="Autor" content="Braulio Martinez Salgado">
+        <meta name="Autor" content="Andrés Fernando García Delgado">
         <meta name="Fecha" content="Lunes 07 de Abril de 2025">
         <meta name="Resumen" content="Efectos">
         <link rel="stylesheet" type="text/css" href="Actividad_08.css">
