--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <li>Actividad No. 6 (<i>Boostrap</i>) <a href="parcial_2/actividad_06.html">Link</a></li>
     <li>Actividad No. 7 (<i>Submenú de navegación</i>) <a href="parcial_2/actividad_07.html">Link</a></li>
     <li>Actividad No. 7-1 (<i>Menú tipo Bootstrap</i>) <a href="parcial_2/actividad_07-1.html">Link</a></li>
+    <li>Actividad No. 8 (<i>Menú tipo Bootstrap</i>) <a href="parcial_2/actividad_08.html">Link</a></li>
   </ol>
 </li>
   
