--- a/proyecto mundial/mundial.html
+++ b/proyecto mundial/mundial.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fútbol Mundial</title>
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
-  <meta name="author" content="Braulio Martinez Salgado">
+  <meta name="author" content="Andrés Fernando García Delgado">
   <meta name="description" content="Portafolio de Programación Web I">
   <meta name="fecha" content="14 de Febrero de 2025">
 
