--- a/proyecto mundial/contacto.html
+++ b/proyecto mundial/contacto.html
@@ -6,6 +6,8 @@
   <title>Contacto - Mundial</title>
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Iconos de Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <style>
     body {
       background-image: url("1140-world-cup-trophy-ball-trivia-esp.jpg");
@@ -13,10 +15,17 @@
       background-position: center;
       background-repeat: no-repeat;
       color: black;
+      padding-top: 80px; /* espacio para la navbar */
       min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    }
+
+    .navbar-custom {
+      background-color: #f8f9fa;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
     }
 
     .card {
@@ -29,6 +38,9 @@
 
     .integrante img {
       width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
       margin-bottom: 10px;
     }
 
@@ -43,15 +55,36 @@
   </style>
 </head>
 <body>
-  <div class="container">
+
+  <!-- Barra de navegación -->
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="#">Mundial</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="mundial.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="referencias.html">Referencias</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container mt-4">
     <div class="row justify-content-center g-4">
       <!-- Integrante 1 -->
       <div class="col-md-4">
         <div class="card integrante">
-          <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Integrante 1">
+          <img src="img integrante 1.jfif" alt="Integrante 1">
           <h5>Integrante No. 1</h5>
           <div class="info">
-            <p><strong>Matrícula:</strong> 185668/p>
+            <p><strong>Matrícula:</strong> 185668</p>
             <p><strong>Nombre:</strong> Braulio Martinez Salgado</p>
             <p><strong>Semestre:</strong> Segundo</p>
             <p><strong>Carrera:</strong> Tecnologías de la Información</p>
@@ -62,7 +95,7 @@
       <!-- Integrante 2 -->
       <div class="col-md-4">
         <div class="card integrante">
-          <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Integrante 2">
+          <img src="img intagrante 2.jfif" alt="Integrante 2">
           <h5>Integrante No. 2</h5>
           <div class="info">
             <p><strong>Matrícula:</strong> 187134</p>
@@ -76,11 +109,11 @@
       <!-- Integrante 3 -->
       <div class="col-md-4">
         <div class="card integrante">
-          <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Integrante 3">
+          <img src="img intagrante 3.jfif" alt="Integrante 3">
           <h5>Integrante No. 3</h5>
           <div class="info">
             <p><strong>Matrícula:</strong> 186425</p>
-            <p><strong>Nombre:</strong> Jose Manuel Niño Ibarra/p>
+            <p><strong>Nombre:</strong> Jose Manuel Niño Ibarra</p>
             <p><strong>Semestre:</strong> Segundo</p>
             <p><strong>Carrera:</strong> Tecnologías de la Información</p>
             <p><strong>Temas:</strong> Proyecto</p>
@@ -89,5 +122,6 @@
       </div>
     </div>
   </div>
+
 </body>
 </html>
