--- a/parcial_2/actividad_04.html
+++ b/parcial_2/actividad_04.html
@@ -7,7 +7,7 @@
         <meta name="Autor" content="Andrés Fernando García Delgado">
         <meta name="Fecha" content="Lunes 03 de Marzo de 2025">
         <meta name="Resumen" content="Estilo texto">
-        <link rel="stylesheet" type="text/css" href="Actividad_04.css">
+        <link rel="stylesheet" type="text/css" href="actividad_04.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap" rel="stylesheet">
