--- a/parcial_2/Actividad_08.html
+++ b/parcial_2/Actividad_08.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <!-- Sección para el encabezado de la página -->
         <title>Unidad 02 | Actividad No. 08</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta charset="utf-8">
-        <meta name="Autor" content="Jonathan Francisco Ruan López">
+        <meta name="Autor" content="Andrés Fernando García Delgado">
         <meta name="Fecha" content="Lunes 07 de Abril de 2025">
         <meta name="Resumen" content="Efectos">
         <link rel="stylesheet" type="text/css" href="Actividad_08.css">
     </head>
     <body>
-        <!-- Sección para el contenido de la página web-->
         <h1>Unidad 02 | Actividad 08 | Tema: Efectos</h1>
         <h2>Menú Horizontal</h2>
         &Int;
