--- a/parcial_2/actividad_08.html
+++ b/parcial_2/actividad_08.html
@@ -7,7 +7,7 @@
         <meta name="Autor" content="Andrés Fernando García Delgado">
         <meta name="Fecha" content="Lunes 07 de Abril de 2025">
         <meta name="Resumen" content="Efectos">
-        <link rel="stylesheet" type="text/css" href="Actividad_08.css">
+        <link rel="stylesheet" type="text/css" href="actividad_08.css">
     </head>
     <body>
         <h1>Unidad 02 | Actividad 08 | Tema: Efectos</h1>
