--- a/parcial_2/actividad_08.html
+++ b/parcial_2/actividad_08.html
@@ -37,7 +37,7 @@
         <h3>Barra de Progreso</h3>
             <div class="barraProgreso">&nbsp;</div>
         <h3>Rainbow</h3>
-            <div class="rainbow">Suavisado</div>
+            <div class="rainbow">suavizado</div>
             <div class="arcoiris">Normal</div>
     </body>
 </html>
