--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <li><strong>Unidad No. 3</strong></li>
   
 <li><strong>Proyecto</strong></li>
-      <li>Proyecto (<i>Proyecto Mundial</i>) <a href="proyecto_mundial/mundial.html">Link</a></li>
+      <li><i>Fútbol Mundial</i> <a href="proyecto_mundial/mundial.html" target="_blank">Link</a></li>
 </ul>
 </div>
 </body>
