--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
   </ol>
 </li>
   
-<li><strong>Unidad No. 3</strong></li>
+<li><strong>Unidad No. 3</strong>
+  <ol>
+    <li>Actividad No. 1 (<i>Tablas</i>) <a href="parcial_3/actividad_01.html">Link</a></li>
+    <li>Actividad No. 2 (<i>Tablas</i>) <a href="parcial_3/actividad_02.html">Link</a></li>
+    <li>Actividad No. 3 (<i>Tablas</i>) <a href="parcial_3/actividad_03.html">Link</a></li>
+    <li>Actividad No. 3-1 (<i>Tablas</i>) <a href="parcial_3/actividad_03-1.html">Link</a></li>
+    <li>Actividad No. 4 (<i>Tablas</i>) <a href="parcial_3/actividad_04.html">Link</a></li>
+    <li>Actividad No. 5 (<i>Tablas</i>) <a href="parcial_3/actividad_05.html">Link</a></li>
+    <li>Actividad No. 6 (<i>Tablas</i>) <a href="parcial_3/actividad_06.html">Link</a></li>
+    <li>Actividad No. 7 (<i>Tablas</i>) <a href="parcial_3/actividad_07.html">Link</a></li>
+    
+  </ol>
+</li>
   
 <li><strong>Proyecto</strong></li>
       <li><i>Fútbol Mundial</i> <a href="proyecto_mundial/mundial.html" target="_blank">Link</a></li>
