--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
    <br>
 <h2>Programación Web I</h2>
    <br>
-<p><strong>187134 Andres Fernando Garcia Delgado</strong></p>
+<p><strong>187134-Andres Fernando Garcia Delgado</strong></p>
    <br>
+<p>Proyecto en construccion</p>
 <ul>
 <li><strong>Unidad No. 1</strong>
  <ol>
