--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
   <br>
 <li><strong>Unidad No. 3</strong>
   <ol>
-    <li>Actividad No. 1 (<i>Tablas</i>) <a href="parcial_3/actividad_01.html">Link</a></li>
-    <li>Actividad No. 2 (<i>Tablas</i>) <a href="parcial_3/actividad_02.html">Link</a></li>
-    <li>Actividad No. 3 (<i>Tablas</i>) <a href="parcial_3/actividad_03.html">Link</a></li>
+    <li>Actividad No. 1 (<i>Hola mundo</i>) <a href="parcial_3/actividad_01.html">Link</a></li>
+    <li>Actividad No. 2 (<i>Pop-up</i>) <a href="parcial_3/actividad_02.html">Link</a></li>
+    <li>Actividad No. 3 (<i>Calculadora</i>) <a href="parcial_3/actividad_03.html">Link</a></li>
     <li>Actividad No. 3-1 (<i>Tablas</i>) <a href="parcial_3/actividad_03-1.html">Link</a></li>
-    <li>Actividad No. 4 (<i>Tablas</i>) <a href="parcial_3/actividad_04.html">Link</a></li>
-    <li>Actividad No. 5 (<i>Tablas</i>) <a href="parcial_3/actividad_05.html">Link</a></li>
-    <li>Actividad No. 6 (<i>Tablas</i>) <a href="parcial_3/actividad_06.html">Link</a></li>
-    <li>Actividad No. 7 (<i>Tablas</i>) <a href="parcial_3/actividad_07.html">Link</a></li>
+    <li>Actividad No. 4 (<i>GetElementById</i>) <a href="parcial_3/actividad_04.html">Link</a></li>
+    <li>Actividad No. 5 (<i>Formularios</i>) <a href="parcial_3/actividad_05.html">Link</a></li>
+    <li>Actividad No. 6 (<i>Eventos</i>) <a href="parcial_3/actividad_06.html">Link</a></li>
+    <li>Actividad No. 7 (<i>Controles</i>) <a href="parcial_3/actividad_07.html">Link</a></li>
     
   </ol>
 </li>
