--- a/proyecto_mundial/copas.html
+++ b/proyecto_mundial/copas.html
@@ -79,6 +79,6 @@
     <h3>Video destacado</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/watch?v=FA1sR2SZAlY" title="Final Qatar 2022" frameborder="0" allowfullscreen></iframe>
   </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
