--- a/proyecto_mundial/copas.html
+++ b/proyecto_mundial/copas.html
@@ -9,6 +9,15 @@
 <body>
   <header id="navbar-container"></header>
   <script>
+    
+  document.addEventListener("DOMContentLoaded", () => {
+    fetch("navbar.html")
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("navbar-container").innerHTML = data;
+      });
+  });
+
     fetch("navbar.html")
       .then(res => res.text())
       .then(data => {
