--- a/proyecto_mundial/jugadores.html
+++ b/proyecto_mundial/jugadores.html
@@ -17,6 +17,13 @@
   <!-- Barra superior -->
   <header id="navbar-container"></header>
   <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    fetch("navbar.html")
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("navbar-container").innerHTML = data;
+      });
+  });
     fetch("navbar.html")
       .then(res => res.text())
       .then(data => {
@@ -75,4 +82,18 @@
     <h3>Impacto en el fútbol y la sociedad</h3>
     <p>Estos jugadores no solo han brillado en el campo, sino que han influido en millones de personas alrededor del mundo. A través de campañas benéficas, academias de fútbol y presencia en medios, se han convertido en modelos a seguir dentro y fuera del deporte.</p>
 
-    <p>Actualmente, muchos de ellos participan en proyectos sociales, promueven la inclusión en el deporte y apoya
+    <p>Actualmente, muchos de ellos participan en proyectos sociales, promueven la inclusión en el deporte y apoyan el desarrollo de jóvenes talentos a nivel global.</p>
+
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/4bVxZlVCLQE" title="Los mejores momentos del fútbol" allowfullscreen class="my-4"></iframe>
+  </main>
+
+  <footer class="container mt-5">
+    <hr>
+    <p class="float-end"><a href="#">Volver arriba</a></p>
+    <p>&copy; 2025 FIFA Fan Web &middot; <a href="#">Privacidad</a> &middot; <a href="#">Términos</a></p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
